[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-twitter"
version = "0.1.0"
requires-python = ">=3.10"
description = "Open-source Twitter/X OSINT network mapping tool"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    # Scraping
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "fake-useragent>=1.5",

    # Storage
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # Graph
    "networkx>=3.3",
    "neo4j>=5.20",
    "python-louvain>=0.16",

    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # CLI
    "click>=8.1",
    "rich>=13.7",

    # Utilities
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-networkx>=3.2",
]

[project.scripts]
osint = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "frontend*", "docker*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: mark test as requiring live network/browser (deselected by default)",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
